boton central y botones derechos ajustados

--- a/simon.css
+++ b/simon.css
@@ -1,3 +1,7 @@
+body {
+    background-color: rgb(255, 215, 199);
+}
+
 h1 {
     text-align: center;
 
@@ -5,7 +9,7 @@ h1 {
 
 #pagina {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .mitad {
@@ -16,6 +20,45 @@ h1 {
     align-items: center;
 }
 
-button {
-    height: 20%;
+#centro button {
+    height: 150px;
+    background-color: rgb(87, 255, 87);
+    font-size: xx-large;
+    color: white;
+    border: solid 3px green;
+    border-radius: 100%;
+}
+
+#der button {
+    height: 200px;
+    width: 200px;
+    margin: 20ox;
+    border: solid 3px;
+    border-radius: 20px;
+}
+
+#superior {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#inferior {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#amarillo {
+    background-color: yellow;
+}
+
+#azul {
+    background-color: blue;
+}
+
+#rojo {
+    background-color: red;
+}
+
+#verde {
+    background-color: green;
 }
